from __future__ import annotations
from datetime import date,datetime
from decimal import Decimal
from uuid import UUID
from sqlalchemy import Date,DateTime,ForeignKey,Index,Integer,Numeric,String,Text,UniqueConstraint,Uuid
from sqlalchemy.dialects.postgresql import JSONB
from sqlalchemy.orm import Mapped,mapped_column
from .base import Base,TenantOwnedMixin,TimestampMixin,UUIDPrimaryKeyMixin
from .enums import AssignmentStatus
class Qualification(Base,UUIDPrimaryKeyMixin,TenantOwnedMixin,TimestampMixin):
    __tablename__="qualifications"; __table_args__=(UniqueConstraint("tenant_id","code"),{"schema":"academic"})
    owning_unit_id:Mapped[UUID]=mapped_column(ForeignKey("tenant.organisational_units.id",ondelete="RESTRICT"),nullable=False); code:Mapped[str]=mapped_column(String(80),nullable=False); name:Mapped[str]=mapped_column(String(255),nullable=False); qualification_type:Mapped[str]=mapped_column(String(100),nullable=False); level_framework:Mapped[str|None]=mapped_column(String(100)); level_value:Mapped[str|None]=mapped_column(String(50)); total_credits:Mapped[Decimal|None]=mapped_column(Numeric(8,2)); attributes:Mapped[dict]=mapped_column(JSONB,default=dict,nullable=False)
class Programme(Base,UUIDPrimaryKeyMixin,TenantOwnedMixin,TimestampMixin):
    __tablename__="programmes"; __table_args__=(UniqueConstraint("tenant_id","code"),{"schema":"academic"})
    owning_unit_id:Mapped[UUID]=mapped_column(ForeignKey("tenant.organisational_units.id",ondelete="RESTRICT"),nullable=False); qualification_id:Mapped[UUID|None]=mapped_column(ForeignKey("academic.qualifications.id",ondelete="SET NULL")); code:Mapped[str]=mapped_column(String(80),nullable=False); name:Mapped[str]=mapped_column(String(255),nullable=False); delivery_mode:Mapped[str]=mapped_column(String(60),default="contact",nullable=False); attributes:Mapped[dict]=mapped_column(JSONB,default=dict,nullable=False)
class Module(Base,UUIDPrimaryKeyMixin,TenantOwnedMixin,TimestampMixin):
    __tablename__="modules"; __table_args__=(UniqueConstraint("tenant_id","code"),{"schema":"academic"})
    owning_unit_id:Mapped[UUID]=mapped_column(ForeignKey("tenant.organisational_units.id",ondelete="RESTRICT"),nullable=False); code:Mapped[str]=mapped_column(String(80),nullable=False); name:Mapped[str]=mapped_column(String(255),nullable=False); credit_value:Mapped[Decimal|None]=mapped_column(Numeric(8,2)); level_framework:Mapped[str|None]=mapped_column(String(100)); level_value:Mapped[str|None]=mapped_column(String(50)); default_contact_hours:Mapped[int|None]=mapped_column(Integer); attributes:Mapped[dict]=mapped_column(JSONB,default=dict,nullable=False)
class ProgrammeModule(Base,TenantOwnedMixin):
    __tablename__="programme_modules"; __table_args__=(UniqueConstraint("tenant_id","programme_id","module_id"),{"schema":"academic"})
    programme_id:Mapped[UUID]=mapped_column(ForeignKey("academic.programmes.id",ondelete="CASCADE"),primary_key=True); module_id:Mapped[UUID]=mapped_column(ForeignKey("academic.modules.id",ondelete="CASCADE"),primary_key=True); study_year:Mapped[int|None]=mapped_column(Integer); semester_or_term:Mapped[str|None]=mapped_column(String(50)); is_core:Mapped[bool]=mapped_column(default=True,nullable=False)
class ModuleOffering(Base,UUIDPrimaryKeyMixin,TenantOwnedMixin,TimestampMixin):
    __tablename__="module_offerings"; __table_args__=(UniqueConstraint("tenant_id","module_id","academic_period_id","offering_code"),Index("ix_module_offering_scope","tenant_id","org_unit_id","academic_period_id"),{"schema":"academic"})
    module_id:Mapped[UUID]=mapped_column(ForeignKey("academic.modules.id"),nullable=False); academic_period_id:Mapped[UUID]=mapped_column(ForeignKey("tenant.academic_periods.id"),nullable=False); org_unit_id:Mapped[UUID]=mapped_column(ForeignKey("tenant.organisational_units.id"),nullable=False); offering_code:Mapped[str]=mapped_column(String(80),nullable=False); campus_or_location:Mapped[str|None]=mapped_column(String(180)); delivery_mode:Mapped[str]=mapped_column(String(60),default="contact",nullable=False); starts_on:Mapped[date|None]=mapped_column(Date); ends_on:Mapped[date|None]=mapped_column(Date); attributes:Mapped[dict]=mapped_column(JSONB,default=dict,nullable=False)
class LearningOutcome(Base,UUIDPrimaryKeyMixin,TenantOwnedMixin,TimestampMixin):
    __tablename__="learning_outcomes"; __table_args__=(UniqueConstraint("tenant_id","module_id","outcome_code"),{"schema":"academic"})
    module_id:Mapped[UUID]=mapped_column(ForeignKey("academic.modules.id"),nullable=False); outcome_code:Mapped[str]=mapped_column(String(60),nullable=False); statement:Mapped[str]=mapped_column(Text,nullable=False); cognitive_level:Mapped[str|None]=mapped_column(String(80)); sequence_order:Mapped[int]=mapped_column(Integer,default=0,nullable=False)
class LecturerAssignment(Base,UUIDPrimaryKeyMixin,TenantOwnedMixin,TimestampMixin):
    __tablename__="lecturer_assignments"; __table_args__=(Index("ix_lecturer_assignment_active","tenant_id","user_id","module_offering_id","valid_until"),{"schema":"academic"})
    user_id:Mapped[UUID]=mapped_column(ForeignKey("iam.users.id"),nullable=False); module_offering_id:Mapped[UUID]=mapped_column(ForeignKey("academic.module_offerings.id"),nullable=False); assigned_by_user_id:Mapped[UUID]=mapped_column(ForeignKey("iam.users.id"),nullable=False); responsibility_type:Mapped[str]=mapped_column(String(80),default="lecturer",nullable=False); workload_percentage:Mapped[Decimal|None]=mapped_column(Numeric(5,2)); status:Mapped[str]=mapped_column(String(30),default=AssignmentStatus.ACTIVE.value,nullable=False); valid_from:Mapped[datetime]=mapped_column(DateTime(timezone=True),nullable=False); valid_until:Mapped[datetime|None]=mapped_column(DateTime(timezone=True)); ended_reason:Mapped[str|None]=mapped_column(Text)
class CoordinatorAssignment(Base,UUIDPrimaryKeyMixin,TenantOwnedMixin,TimestampMixin):
    __tablename__="coordinator_assignments"; __table_args__=(Index("ix_coordinator_target","tenant_id","target_type","target_id"),{"schema":"academic"})
    user_id:Mapped[UUID]=mapped_column(ForeignKey("iam.users.id"),nullable=False); coordinator_type:Mapped[str]=mapped_column(String(30),nullable=False); target_type:Mapped[str]=mapped_column(String(40),nullable=False); target_id:Mapped[UUID]=mapped_column(Uuid(as_uuid=True),nullable=False); assigned_by_user_id:Mapped[UUID]=mapped_column(ForeignKey("iam.users.id"),nullable=False); valid_from:Mapped[datetime]=mapped_column(DateTime(timezone=True),nullable=False); valid_until:Mapped[datetime|None]=mapped_column(DateTime(timezone=True)); status:Mapped[str]=mapped_column(String(30),default=AssignmentStatus.ACTIVE.value,nullable=False)
class ModeratorAssignment(Base,UUIDPrimaryKeyMixin,TenantOwnedMixin,TimestampMixin):
    __tablename__="moderator_assignments"; __table_args__=(Index("ix_moderator_target","tenant_id","target_type","target_id"),{"schema":"academic"})
    user_id:Mapped[UUID]=mapped_column(ForeignKey("iam.users.id"),nullable=False); moderator_type:Mapped[str]=mapped_column(String(30),nullable=False); target_type:Mapped[str]=mapped_column(String(40),nullable=False); target_id:Mapped[UUID]=mapped_column(Uuid(as_uuid=True),nullable=False); assigned_by_user_id:Mapped[UUID]=mapped_column(ForeignKey("iam.users.id"),nullable=False); valid_from:Mapped[datetime]=mapped_column(DateTime(timezone=True),nullable=False); valid_until:Mapped[datetime|None]=mapped_column(DateTime(timezone=True)); status:Mapped[str]=mapped_column(String(30),default=AssignmentStatus.ACTIVE.value,nullable=False)
class TeachingWorkload(Base,UUIDPrimaryKeyMixin,TenantOwnedMixin,TimestampMixin):
    __tablename__="teaching_workloads"; __table_args__=(UniqueConstraint("tenant_id","user_id","academic_period_id"),{"schema":"academic"})
    user_id:Mapped[UUID]=mapped_column(ForeignKey("iam.users.id"),nullable=False); academic_period_id:Mapped[UUID]=mapped_column(ForeignKey("tenant.academic_periods.id"),nullable=False); allocated_hours:Mapped[Decimal]=mapped_column(Numeric(8,2),default=0,nullable=False); workload_limit_hours:Mapped[Decimal|None]=mapped_column(Numeric(8,2)); calculation_details:Mapped[dict]=mapped_column(JSONB,default=dict,nullable=False)
