from __future__ import annotations
from datetime import datetime
from uuid import UUID
from sqlalchemy import BigInteger,Boolean,DateTime,ForeignKey,Index,Integer,String,Text,UniqueConstraint,Uuid
from sqlalchemy.dialects.postgresql import JSONB
from sqlalchemy.orm import Mapped,mapped_column
from .base import Base,TenantOwnedMixin,TimestampMixin,UUIDPrimaryKeyMixin
from .enums import DocumentVersionStatus,DocumentVisibility,UploadBatchStatus,UploadItemStatus
class UploadBatch(Base,UUIDPrimaryKeyMixin,TenantOwnedMixin,TimestampMixin):
    __tablename__="upload_batches"; __table_args__=(Index("ix_upload_batch_owner","tenant_id","uploaded_by_user_id","status"),{"schema":"ingestion"})
    uploaded_by_user_id:Mapped[UUID]=mapped_column(ForeignKey("iam.users.id"),nullable=False); active_role_code:Mapped[str]=mapped_column(String(80),nullable=False); scope_type:Mapped[str]=mapped_column(String(60),nullable=False); scope_id:Mapped[UUID|None]=mapped_column(Uuid(as_uuid=True)); source_channel:Mapped[str]=mapped_column(String(50),default="web",nullable=False); status:Mapped[str]=mapped_column(String(40),default=UploadBatchStatus.CREATED.value,nullable=False); expected_item_count:Mapped[int|None]=mapped_column(Integer); received_item_count:Mapped[int]=mapped_column(Integer,default=0,nullable=False); completed_item_count:Mapped[int]=mapped_column(Integer,default=0,nullable=False); failed_item_count:Mapped[int]=mapped_column(Integer,default=0,nullable=False); change_reason:Mapped[str|None]=mapped_column(Text); metadata_payload:Mapped[dict]=mapped_column("metadata",JSONB,default=dict,nullable=False); completed_at:Mapped[datetime|None]=mapped_column(DateTime(timezone=True))
class StorageObject(Base,UUIDPrimaryKeyMixin,TenantOwnedMixin,TimestampMixin):
    __tablename__="storage_objects"; __table_args__=(UniqueConstraint("tenant_id","bucket_name","object_key","storage_version_id"),Index("ix_storage_checksum","tenant_id","sha256"),{"schema":"content"})
    provider:Mapped[str]=mapped_column(String(40),default="s3",nullable=False); bucket_name:Mapped[str]=mapped_column(String(100),nullable=False); object_key:Mapped[str]=mapped_column(String(1024),nullable=False); storage_version_id:Mapped[str]=mapped_column(String(255),nullable=False); etag:Mapped[str|None]=mapped_column(String(255)); sha256:Mapped[str]=mapped_column(String(64),nullable=False); size_bytes:Mapped[int]=mapped_column(BigInteger,nullable=False); media_type:Mapped[str|None]=mapped_column(String(150)); encryption_method:Mapped[str|None]=mapped_column(String(100)); retention_until:Mapped[datetime|None]=mapped_column(DateTime(timezone=True)); legal_hold:Mapped[bool]=mapped_column(Boolean,default=False,nullable=False); deleted_at:Mapped[datetime|None]=mapped_column(DateTime(timezone=True)); deletion_evidence_sha256:Mapped[str|None]=mapped_column(String(64))
class Document(Base,UUIDPrimaryKeyMixin,TenantOwnedMixin,TimestampMixin):
    __tablename__="documents"; __table_args__=(Index("ix_document_scope","tenant_id","org_unit_id","programme_id","module_id"),Index("ix_document_type","tenant_id","document_type"),{"schema":"content"})
    title:Mapped[str]=mapped_column(String(500),nullable=False); document_type:Mapped[str]=mapped_column(String(100),nullable=False); owner_user_id:Mapped[UUID]=mapped_column(ForeignKey("iam.users.id"),nullable=False); org_unit_id:Mapped[UUID|None]=mapped_column(ForeignKey("tenant.organisational_units.id")); programme_id:Mapped[UUID|None]=mapped_column(ForeignKey("academic.programmes.id")); module_id:Mapped[UUID|None]=mapped_column(ForeignKey("academic.modules.id")); visibility:Mapped[str]=mapped_column(String(40),default=DocumentVisibility.PRIVATE.value,nullable=False); current_version_id:Mapped[UUID|None]=mapped_column(Uuid(as_uuid=True), ForeignKey("content.document_versions.id", use_alter=True, name="fk_documents_current_version")); is_deleted:Mapped[bool]=mapped_column(Boolean,default=False,nullable=False); deleted_at:Mapped[datetime|None]=mapped_column(DateTime(timezone=True)); metadata_payload:Mapped[dict]=mapped_column("metadata",JSONB,default=dict,nullable=False)
class DocumentVersion(Base,UUIDPrimaryKeyMixin,TenantOwnedMixin,TimestampMixin):
    __tablename__="document_versions"; __table_args__=(UniqueConstraint("tenant_id","document_id","version_number"),Index("ix_document_version_checksum","tenant_id","sha256"),{"schema":"content"})
    document_id:Mapped[UUID]=mapped_column(ForeignKey("content.documents.id"),nullable=False); version_number:Mapped[int]=mapped_column(Integer,nullable=False); previous_version_id:Mapped[UUID|None]=mapped_column(ForeignKey("content.document_versions.id")); storage_object_id:Mapped[UUID]=mapped_column(ForeignKey("content.storage_objects.id"),nullable=False); upload_batch_id:Mapped[UUID|None]=mapped_column(ForeignKey("ingestion.upload_batches.id")); uploaded_by_user_id:Mapped[UUID]=mapped_column(ForeignKey("iam.users.id"),nullable=False); uploader_role_code:Mapped[str]=mapped_column(String(80),nullable=False); original_filename:Mapped[str]=mapped_column(String(500),nullable=False); sha256:Mapped[str]=mapped_column(String(64),nullable=False); status:Mapped[str]=mapped_column(String(40),default=DocumentVersionStatus.WORKING.value,nullable=False); change_reason:Mapped[str]=mapped_column(Text,nullable=False); provenance:Mapped[dict]=mapped_column(JSONB,default=dict,nullable=False); extracted_text_status:Mapped[str]=mapped_column(String(30),default="pending",nullable=False); indexed_at:Mapped[datetime|None]=mapped_column(DateTime(timezone=True)); effective_from:Mapped[datetime|None]=mapped_column(DateTime(timezone=True)); effective_until:Mapped[datetime|None]=mapped_column(DateTime(timezone=True))
class UploadItem(Base,UUIDPrimaryKeyMixin,TenantOwnedMixin,TimestampMixin):
    __tablename__="upload_items"; __table_args__=(UniqueConstraint("tenant_id","upload_batch_id","client_item_key"),Index("ix_upload_item_status","tenant_id","upload_batch_id","status"),{"schema":"ingestion"})
    upload_batch_id:Mapped[UUID]=mapped_column(ForeignKey("ingestion.upload_batches.id"),nullable=False); client_item_key:Mapped[str]=mapped_column(String(180),nullable=False); original_filename:Mapped[str]=mapped_column(String(500),nullable=False); media_type:Mapped[str|None]=mapped_column(String(150)); size_bytes:Mapped[int]=mapped_column(BigInteger,nullable=False); sha256:Mapped[str]=mapped_column(String(64),nullable=False); status:Mapped[str]=mapped_column(String(40),default=UploadItemStatus.RECEIVED.value,nullable=False); detected_document_type:Mapped[str|None]=mapped_column(String(100)); classification_confidence:Mapped[str|None]=mapped_column(String(30)); proposed_scope:Mapped[dict]=mapped_column(JSONB,default=dict,nullable=False); validation_errors:Mapped[list]=mapped_column(JSONB,default=list,nullable=False); storage_object_id:Mapped[UUID|None]=mapped_column(ForeignKey("content.storage_objects.id")); document_version_id:Mapped[UUID|None]=mapped_column(ForeignKey("content.document_versions.id"))
class DocumentRelationship(Base,UUIDPrimaryKeyMixin,TenantOwnedMixin,TimestampMixin):
    __tablename__="document_relationships"; __table_args__=(UniqueConstraint("tenant_id","source_version_id","target_version_id","relationship_type"),{"schema":"content"})
    source_version_id:Mapped[UUID]=mapped_column(ForeignKey("content.document_versions.id"),nullable=False); target_version_id:Mapped[UUID]=mapped_column(ForeignKey("content.document_versions.id"),nullable=False); relationship_type:Mapped[str]=mapped_column(String(50),nullable=False); rationale:Mapped[str|None]=mapped_column(Text); created_by_user_id:Mapped[UUID]=mapped_column(ForeignKey("iam.users.id"),nullable=False)
class DocumentClassification(Base,UUIDPrimaryKeyMixin,TenantOwnedMixin,TimestampMixin):
    __tablename__="document_classifications"; __table_args__=(Index("ix_document_classification","tenant_id","document_version_id","label"),{"schema":"content"})
    document_version_id:Mapped[UUID]=mapped_column(ForeignKey("content.document_versions.id"),nullable=False); label:Mapped[str]=mapped_column(String(120),nullable=False); value:Mapped[str]=mapped_column(String(255),nullable=False); confidence:Mapped[str|None]=mapped_column(String(30)); source:Mapped[str]=mapped_column(String(50),default="user",nullable=False); confirmed_by_user_id:Mapped[UUID|None]=mapped_column(ForeignKey("iam.users.id"))
