from __future__ import annotations
from datetime import datetime
from uuid import UUID
from sqlalchemy import BigInteger,Boolean,DateTime,ForeignKey,Index,Integer,String,Text,UniqueConstraint,Uuid
from sqlalchemy.dialects.postgresql import JSONB
from sqlalchemy.orm import Mapped,mapped_column
from .base import Base,TenantOwnedMixin,TimestampMixin,UUIDPrimaryKeyMixin
class Conversation(Base,UUIDPrimaryKeyMixin,TenantOwnedMixin,TimestampMixin):
    __tablename__="conversations"; __table_args__=(Index("ix_conversation_owner","tenant_id","owner_user_id","updated_at"),{"schema":"conversation"})
    owner_user_id:Mapped[UUID]=mapped_column(ForeignKey("iam.users.id"),nullable=False); title:Mapped[str]=mapped_column(String(300),nullable=False); org_unit_id:Mapped[UUID|None]=mapped_column(ForeignKey("tenant.organisational_units.id")); programme_id:Mapped[UUID|None]=mapped_column(ForeignKey("academic.programmes.id")); module_id:Mapped[UUID|None]=mapped_column(ForeignKey("academic.modules.id")); is_archived:Mapped[bool]=mapped_column(Boolean,default=False,nullable=False); context:Mapped[dict]=mapped_column(JSONB,default=dict,nullable=False)
class Message(Base,UUIDPrimaryKeyMixin,TenantOwnedMixin,TimestampMixin):
    __tablename__="messages"; __table_args__=(Index("ix_message_sequence","tenant_id","conversation_id","sequence_number"),{"schema":"conversation"})
    conversation_id:Mapped[UUID]=mapped_column(ForeignKey("conversation.conversations.id"),nullable=False); author_user_id:Mapped[UUID|None]=mapped_column(ForeignKey("iam.users.id")); role:Mapped[str]=mapped_column(String(30),nullable=False); sequence_number:Mapped[int]=mapped_column(Integer,nullable=False); content_text:Mapped[str]=mapped_column(Text,nullable=False); content_blocks:Mapped[list]=mapped_column(JSONB,default=list,nullable=False); parent_message_id:Mapped[UUID|None]=mapped_column(ForeignKey("conversation.messages.id")); is_redacted:Mapped[bool]=mapped_column(Boolean,default=False,nullable=False)
class MessageAttachment(Base,UUIDPrimaryKeyMixin,TenantOwnedMixin,TimestampMixin):
    __tablename__="message_attachments"; __table_args__=(UniqueConstraint("tenant_id","message_id","document_version_id"),{"schema":"conversation"})
    message_id:Mapped[UUID]=mapped_column(ForeignKey("conversation.messages.id"),nullable=False); document_version_id:Mapped[UUID]=mapped_column(ForeignKey("content.document_versions.id"),nullable=False); attachment_purpose:Mapped[str]=mapped_column(String(80),default="context",nullable=False)
class AIRequest(Base,UUIDPrimaryKeyMixin,TenantOwnedMixin,TimestampMixin):
    __tablename__="ai_requests"; __table_args__=(Index("ix_ai_request_message","tenant_id","message_id"),{"schema":"ai"})
    conversation_id:Mapped[UUID]=mapped_column(ForeignKey("conversation.conversations.id"),nullable=False); message_id:Mapped[UUID]=mapped_column(ForeignKey("conversation.messages.id"),nullable=False); requested_by_user_id:Mapped[UUID]=mapped_column(ForeignKey("iam.users.id"),nullable=False); intent:Mapped[str]=mapped_column(String(120),nullable=False); output_type:Mapped[str]=mapped_column(String(120),nullable=False); privacy_classification:Mapped[str]=mapped_column(String(60),nullable=False); institutional_context_required:Mapped[bool]=mapped_column(Boolean,default=False,nullable=False); source_verification_required:Mapped[bool]=mapped_column(Boolean,default=False,nullable=False); routing_constraints:Mapped[dict]=mapped_column(JSONB,default=dict,nullable=False)
class ModelExecution(Base,UUIDPrimaryKeyMixin,TenantOwnedMixin,TimestampMixin):
    __tablename__="model_executions"; __table_args__=(Index("ix_model_execution_request","tenant_id","ai_request_id","attempt_number"),{"schema":"ai"})
    ai_request_id:Mapped[UUID]=mapped_column(ForeignKey("ai.ai_requests.id"),nullable=False); provider:Mapped[str]=mapped_column(String(60),nullable=False); model_id:Mapped[str]=mapped_column(String(160),nullable=False); routing_reason:Mapped[str]=mapped_column(Text,nullable=False); attempt_number:Mapped[int]=mapped_column(Integer,default=1,nullable=False); input_tokens:Mapped[int|None]=mapped_column(Integer); output_tokens:Mapped[int|None]=mapped_column(Integer); latency_ms:Mapped[int|None]=mapped_column(BigInteger); estimated_cost:Mapped[str|None]=mapped_column(String(50)); status:Mapped[str]=mapped_column(String(40),nullable=False); error_code:Mapped[str|None]=mapped_column(String(120)); started_at:Mapped[datetime]=mapped_column(DateTime(timezone=True),nullable=False); completed_at:Mapped[datetime|None]=mapped_column(DateTime(timezone=True)); execution_metadata:Mapped[dict]=mapped_column(JSONB,default=dict,nullable=False)
class GeneratedOutput(Base,UUIDPrimaryKeyMixin,TenantOwnedMixin,TimestampMixin):
    __tablename__="generated_outputs"; __table_args__=(Index("ix_generated_output_conversation","tenant_id","conversation_id"),{"schema":"conversation"})
    conversation_id:Mapped[UUID]=mapped_column(ForeignKey("conversation.conversations.id"),nullable=False); source_message_id:Mapped[UUID]=mapped_column(ForeignKey("conversation.messages.id"),nullable=False); ai_request_id:Mapped[UUID]=mapped_column(ForeignKey("ai.ai_requests.id"),nullable=False); output_type:Mapped[str]=mapped_column(String(120),nullable=False); title:Mapped[str]=mapped_column(String(500),nullable=False); current_version_id:Mapped[UUID|None]=mapped_column(Uuid(as_uuid=True), ForeignKey("conversation.output_versions.id", use_alter=True, name="fk_generated_outputs_current_version")); is_formally_approved:Mapped[bool]=mapped_column(Boolean,default=False,nullable=False); approval_disclaimer:Mapped[str|None]=mapped_column(Text)
class OutputVersion(Base,UUIDPrimaryKeyMixin,TenantOwnedMixin,TimestampMixin):
    __tablename__="output_versions"; __table_args__=(UniqueConstraint("tenant_id","generated_output_id","version_number"),{"schema":"conversation"})
    generated_output_id:Mapped[UUID]=mapped_column(ForeignKey("conversation.generated_outputs.id"),nullable=False); version_number:Mapped[int]=mapped_column(Integer,nullable=False); previous_version_id:Mapped[UUID|None]=mapped_column(ForeignKey("conversation.output_versions.id")); created_by_user_id:Mapped[UUID|None]=mapped_column(ForeignKey("iam.users.id")); model_execution_id:Mapped[UUID|None]=mapped_column(ForeignKey("ai.model_executions.id")); content_text:Mapped[str]=mapped_column(Text,nullable=False); structured_content:Mapped[dict]=mapped_column(JSONB,default=dict,nullable=False); change_reason:Mapped[str]=mapped_column(Text,nullable=False)
